ibm-odm-prod/ds-console-deployment.yaml
---
# Source: ibm-odm-prod/templates/ds-console-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odm-sno-uat-odm-decisionserverconsole
  labels:
    run: odm-sno-uat-odm-decisionserverconsole
    app: odm-sno-uat-ibm-odm-prod
    chart: "ibm-odm-prod-25.1.10"
    release: "odm-sno-uat"
    heritage: "Helm"
    app.kubernetes.io/instance: odm-sno-uat
    app.kubernetes.io/name: ibm-odm-prod
    app.kubernetes.io/version: "9.5.0.1-IF010"
    app.kubernetes.io/component: decisionServerConsole
    app.kubernetes.io/part-of: odm
    app.kubernetes.io/managed-by: helm
    helm.sh/chart: ibm-odm-prod-25.1.10
spec:
  selector:
    matchLabels:
      release: "odm-sno-uat"
      run: odm-sno-uat-odm-decisionserverconsole
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        run: odm-sno-uat-odm-decisionserverconsole
        app: odm-sno-uat-ibm-odm-prod
        chart: "ibm-odm-prod-25.1.10"
        release: "odm-sno-uat"
        heritage: "Helm"
        app.kubernetes.io/instance: odm-sno-uat
        app.kubernetes.io/name: ibm-odm-prod
        app.kubernetes.io/version: "9.5.0.1-IF010"
        app.kubernetes.io/component: decisionServerConsole
        app.kubernetes.io/part-of: odm
        app.kubernetes.io/managed-by: helm
        helm.sh/chart: ibm-odm-prod-25.1.10
      annotations:
        
        productName: "IBM Operational Decision Manager - Non Prod"
        productID: "e32af5770e06427faae142993c691048"
        productVersion: "9.5.0.1-IF010"
        productMetric: "PROCESSOR_VALUE_UNIT"
        productChargedContainers: ""
        kubectl.kubernetes.io/default-container: "odm-decisionserverconsole"
        
    spec:
      serviceAccountName: odm-sno-uat-ibm-odm-prod-service-account
      automountServiceAccountToken: false
      hostNetwork: false
      hostPID: false
      hostIPC: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 
        fsGroup: 
        
        seccompProfile:
          type: RuntimeDefault
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          #If you specify multiple nodeSelectorTerms associated with nodeAffinity types,
          #then the pod can be scheduled onto a node if one of the nodeSelectorTerms is satisfied.
          #
          #If you specify multiple matchExpressions associated with nodeSelectorTerms,
          #then the pod can be scheduled onto a node only if all matchExpressions can be satisfied.
          #
          #valid operators: In, NotIn, Exists, DoesNotExist, Gt, Lt
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
                - ppc64le
                - s390x
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: run
                  operator: In
                  values:
                  - odm-sno-uat-odm-decisionserverconsole
              topologyKey: "kubernetes.io/hostname"
      volumes:      
      - name: db-config-secret
        secret:
          secretName: odm-sno-uat-odm-secret
      
      - name: odm-sno-uat-odm-auth-secret-volume        
        secret:
          secretName: odm-sno-uat-ds-auth-sso
      
      - name: checkdb-secret
        secret:
          secretName: odm-sno-uat-odm-secret
      
      - name: config-folder-emptydir
        emptyDir: {}
      - name: nssdb-folder-emptydir
        emptyDir: {}
      - name: tmp-folder-emptydir
        emptyDir: {}
      - name: tmp-liberty-output-folder-emptydir
        emptyDir: {}
      - name: logs-folder-emptydir
        emptyDir: {}
      - name: support-folder-emptydir
        emptyDir: {}
      
      - name: tls-stores
        emptyDir: {}
      
      
      - name: odm-sno-uat-odm-logging-volume
        configMap:
          name: odm-sno-uat-odm-ds-console-logging-configmap
          items:
           - key: dsc-logging
             path: logging.xml
      - name: odm-sno-uat-odm-jvm-options-volume
        configMap:
          name: odm-sno-uat-odm-ds-console-jvm-options-configmap
          items:
           - key: dsc-jvm-options
             path: jvm.options
      - name: odm-sno-uat-odm-ds-console-runtime-webconfigref-volume
        configMap:
          name: odm-sno-uat-odm-ds-runtime-web-configmap
      - name: odm-sno-uat-odm-ds-console-webconfigref-volume
        configMap:
          name: odm-sno-uat-odm-ds-console-web-configmap
      - name: lib-workarea-volume
        emptyDir: {}
      
      
      containers:
      - name: odm-decisionserverconsole
        image: cp.icr.io/cp/cp4a/odm/odm-decisionserverconsole:9.5.0.1-IF010
        securityContext:
          runAsUser: 
          runAsNonRoot: true
          privileged: false
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        volumeMounts:        
        - name: db-config-secret
          mountPath: /opt/ibm/wlp/usr/servers/defaultServer/secrets/db-config
          readOnly: true
        
        
        -
          name: config-folder-emptydir
          mountPath: /opt/ibm/wlp/usr/servers/defaultServer
        -
          name: nssdb-folder-emptydir
          mountPath: /etc/pki/nssdb
        -
          name: tmp-folder-emptydir
          mountPath: /tmp
        -
          name: tmp-liberty-output-folder-emptydir
          mountPath: /opt/ibm/wlp/output/defaultServer
        -
          name: logs-folder-emptydir
          mountPath: /logs
        -
          name: support-folder-emptydir
          mountPath: /support
        
        
        
        
        
        - name: odm-sno-uat-odm-auth-secret-volume
          mountPath: "/opt/ibm/wlp/usr/servers/defaultServer/auth"
        - name: odm-sno-uat-odm-logging-volume
          mountPath: "/opt/ibm/wlp/usr/servers/defaultServer/logging"
        - name: odm-sno-uat-odm-jvm-options-volume
          mountPath: "/opt/ibm/wlp/usr/servers/defaultServer/configDropins/overrides"
        -
          name: lib-workarea-volume
          mountPath: /opt/ibm/wlp/output/defaultServer/workarea
        - name: odm-sno-uat-odm-ds-console-webconfigref-volume
          readOnly: true
          mountPath: /opt/ibm/wlp/usr/servers/defaultServer/res/web-configuration.properties
          subPath: web-configuration.properties
        - name: odm-sno-uat-odm-ds-console-runtime-webconfigref-volume
          readOnly: true
          mountPath: /opt/ibm/wlp/usr/servers/defaultServer/web-configuration.properties
          subPath: web-configuration.properties
        ports:
        - name: dsc-port
          containerPort: 9443
        - containerPort: 1883
        readinessProbe:
          httpGet:
            scheme: HTTPS
            path: /res/login.jsp
            port: dsc-port
          periodSeconds: 30
          failureThreshold: 45
          timeoutSeconds: 5
          initialDelaySeconds: 5
        livenessProbe:
          httpGet:
            scheme: HTTPS
            path: /res/login.jsp
            port: dsc-port
          periodSeconds: 30
          failureThreshold: 4
          timeoutSeconds: 5
        startupProbe:
          httpGet:
            scheme: HTTPS
            path: /res/login.jsp
            port: dsc-port
          failureThreshold: 30
          periodSeconds: 20
          timeoutSeconds: 5
          initialDelaySeconds: 15
        resources:
          limits:
            cpu: 4
            ephemeral-storage: 4Gi
            memory: 4Gi
          requests:
            cpu: 1
            ephemeral-storage: 2Gi
            memory: 2Gi      
      imagePullSecrets:
        - name: ibm-entitlement-key
