ibm-odm-prod/dbserver-network-policy.yaml
---
# Source: ibm-odm-prod/templates/dbserver-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: odm-sno-uat-odm-dbserver-network-policy
  labels:
    app: odm-sno-uat-ibm-odm-prod
    chart: "ibm-odm-prod-25.1.10"
    release: "odm-sno-uat"
    heritage: "Helm"
    app.kubernetes.io/instance: odm-sno-uat
    app.kubernetes.io/name: ibm-odm-prod
    app.kubernetes.io/version: "9.5.0.1-IF010"
    app.kubernetes.io/component: dbserver
    app.kubernetes.io/part-of: odm
    app.kubernetes.io/managed-by: helm
    helm.sh/chart: ibm-odm-prod-25.1.10
spec:
  podSelector:
    matchLabels:
      run: odm-sno-uat-dbserver
  ingress:

  # Allow inbound connections from DC, DR, DSC and DSR pods
  - from:
    - podSelector:
        matchLabels:
          run: odm-sno-uat-odm-decisioncenter
    - podSelector:
        matchLabels:
          run: odm-sno-uat-odm-decisionrunner
    - podSelector:
        matchLabels:
          run: odm-sno-uat-odm-decisionserverconsole
    - podSelector:
        matchLabels:
          run: odm-sno-uat-odm-decisionserverruntime
